--- a/website/app/index.html
+++ b/website/app/index.html
@@ -54,16 +54,7 @@
 
   </head>
   <body class="">
-    <!-- Google Tag Manager -->
-
-    <noscript><iframe src="//www.googletagmanager.com/ns.html?id=GTM-QQ7N"
-      height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
-      <script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
-        new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],
-      j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
-      '//www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);
-    })(window,document,'script','dataLayer','GTM-QQ7N');</script>
-    <!-- End Google Tag Manager -->
+    
 
 
     <!--[if lt IE 7]>
@@ -82,7 +73,7 @@
       <div ng-include src="'views/layout/header.html'"></div>
       
       <!-- <div ng-include src="page"></div> -->
-      <div ng-view></div>
+      <div ng-include src="'views/landing/home.html'"></div>
 
       <div ng-include src="'views/layout/footer.html'"></div>
 
@@ -153,9 +144,21 @@
     </script>
 
     <script type="text/javascript">
-      window.addEventListener('load', function() {
-          new FastClick(document.body);
-      }, false);
+      var GoSquared = {};
+      GoSquared.acct = "GSN-123809-O";
+      (function(w){
+        function gs(){
+          w._gstc_lt = +new Date;
+          var d = document, g = d.createElement("script");
+          g.type = "text/javascript";
+          g.src = "//d1l6p2sc9645hc.cloudfront.net/tracker.js";
+          var s = d.getElementsByTagName("script")[0];
+          s.parentNode.insertBefore(g, s);
+        }
+        w.addEventListener ?
+          w.addEventListener("load", gs, false) :
+          w.attachEvent("onload", gs);
+      })(window);
     </script>
 
   </body>
