--- a/website/app/index.html
+++ b/website/app/index.html
@@ -8,7 +8,7 @@
     <meta charset="utf-8"/>
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1"/>
 
-    <title>Manb.ag - Shop Your Tits Off</title>
+    <title>Manbag - Shop Your Tits Off</title>
 
     <meta name="description" content="Shop. Like a Man. Get someone else to do it.">
 
@@ -16,13 +16,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=1.0, maximum-scale=1.0"/>
 
     <meta property="fb:app_id" content="288271097870534">
-    <meta property="og:site_name" content="BRANDiD - Shop. Like a Man.">
-    <meta property="og:image" content="http://www.getbrandid.com/brandid-square-big.png">
-    <meta property="og:title" content="BRANDiD - Shop. Like a Man.">
+    <meta property="og:site_name" content="Manbag - Shop your tits off. And leave your man at home.">
+    <meta property="og:image" content="http://www.manb.ag/images/landing/pages/427699c3.main.png">
+    <meta property="og:title" content="Manbag - Shop your tits off. And leave your man at home.">
     <meta property="og:type" content="website">
-    <meta property="og:url" content="http://www.getbrandid.com/">
+    <meta property="og:url" content="http://manb.ag/">
     <meta property="fb:admins" content="202908185, 100004324987930, 100001036801533">
-    <meta property="og:description" content="We shop for you. It's the easiest way for men to get their clothes. Man up… sign up!">
+    <meta property="og:description" content="We collect all a woman's shopping from the high street & deliver it to their home, so they can shop handsfree. Made for men.">
 
     <link rel="icon" href="favicon.ico" type="image/x-icon">
     <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
@@ -103,10 +103,6 @@
       }(document, 'script'));
     </script>
 
-    <!-- Intercom -->
-    <script id="IntercomSettingsScriptTag">
-      // var intercomSettings = parseIntercomSettings;
-    </script>
 
     <!-- build:js scripts/scripts.js -->
     <script src="scripts/app.js"></script>
@@ -118,29 +114,6 @@
       angular.element(document).ready(function() {
         angular.bootstrap(document, ['manbagApp']);
       });
-    </script>
-
-    <!-- wufoo -->
-    <script type="text/javascript">
-      // var z7w3m7;(function(d, t) {
-      // var s = d.createElement(t), options = {
-      // 'userName':'brandid', 
-      // 'formHash':'z7x3p9', 
-      // 'autoResize':true,
-      // 'height':'502',
-      // 'async':true,
-      // 'header':'show', 
-      // 'ssl':true};
-      // s.src = ('https:' == d.location.protocol ? 'https://' : 'http://') + 'wufoo.com/scripts/embed/form.js';
-      // s.onload = s.onreadystatechange = function() {
-      // var rs = this.readyState; if (rs) if (rs != 'complete') if (rs != 'loaded') return;
-      // try { z7w3m7 = new WufooForm();z7w3m7.initialize(options);z7w3m7.display(); } catch (e) {}};
-      // var scr = d.getElementsByTagName(t)[0], par = scr.parentNode; par.insertBefore(s, scr);
-      // })(document, 'script');
-    </script>
-
-    <!-- intercom -->
-    <script>(function(){var w=window;var ic=w.Intercom;if(typeof ic==="function"){ic('reattach_activator');ic('update',intercomSettings);}else{var d=document;var i=function(){i.c(arguments)};i.q=[];i.c=function(args){i.q.push(args)};w.Intercom=i;function l(){var s=d.createElement('script');s.type='text/javascript';s.async=true;s.src='https://api.intercom.io/api/js/library.js';var x=d.getElementsByTagName('script')[0];x.parentNode.insertBefore(s,x);}if(w.attachEvent){w.attachEvent('onload',l);}else{w.addEventListener('load',l,false);}};})()
     </script>
 
     <script type="text/javascript">
